Now searches across all assemblies to find validators

--- a/samples/ClientSideBlazor/_Imports.razor
+++ b/samples/ClientSideBlazor/_Imports.razor
@@ -5,6 +5,7 @@
 @using Microsoft.JSInterop
 @using ClientSideBlazor
 @using ClientSideBlazor.Shared
-@using ClientSideBlazor.Models
+
+@using SharedModel
 
 @using Blazored.FluentValidation
