--- a/samples/ServerSideBlazor/_Imports.razor
+++ b/samples/ServerSideBlazor/_Imports.razor
@@ -5,6 +5,7 @@
 @using Microsoft.JSInterop
 @using ServerSideBlazor
 @using ServerSideBlazor.Shared
-@using ServerSideBlazor.Models
+
+@using SharedModel
 
 @using Blazored.FluentValidation
