--- a/samples/ServerSideBlazor/Pages/Index.razor
+++ b/samples/ServerSideBlazor/Pages/Index.razor
@@ -9,16 +9,19 @@
     <p>
         <label>Name: </label>
         <InputText @bind-Value="@Person.Name" />
+        <ValidationMessage For="@(() => Person.Name)" />
     </p>
 
     <p>
         <label>Age: </label>
         <InputNumber @bind-Value="@Person.Age" />
+        <ValidationMessage For="@(() => Person.Age)" />
     </p>
 
     <p>
         <label>Email Address: </label>
         <InputText @bind-Value="@Person.EmailAddress" />
+        <ValidationMessage For="@(() => Person.EmailAddress)" />
     </p>
 
     <button type="submit">Save</button>
