--- a/samples/ClientSideBlazor/Pages/Index.razor
+++ b/samples/ClientSideBlazor/Pages/Index.razor
@@ -2,6 +2,8 @@
 
 <h1>Blazored FluentValidation</h1>
 
+<hr class="mb-5" />
+
 <EditForm Model="@Person" OnValidSubmit="@SubmitValidForm">
     <FluentValidationValidator />
     <ValidationSummary />
