--- a/samples/ServerSideBlazor/Pages/Index.razor
+++ b/samples/ServerSideBlazor/Pages/Index.razor
@@ -1,6 +1,8 @@
 ﻿@page "/"
 
-<h1>Blazored FluentValidation</h1>
+<h1>Blazored FluentValidation Sample</h1>
+
+<hr class="mb-5" />
 
 <EditForm Model="@Person" OnValidSubmit="@SubmitValidForm">
     <FluentValidationValidator />
