--- a/samples/ServerSideBlazor/Pages/_Host.cshtml
+++ b/samples/ServerSideBlazor/Pages/_Host.cshtml
@@ -1,4 +1,4 @@
-@page "/"
+﻿@page "/"
 @namespace ServerSideBlazor.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
@@ -7,7 +7,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ServerSideBlazor</title>
+    <title>Blazored FluentValidation - Blazor Server App</title>
     <base href="~/" />
     <environment include="Development">
         <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
