--- a/samples/ClientSideBlazor/_Imports.razor
+++ b/samples/ClientSideBlazor/_Imports.razor
@@ -6,6 +6,6 @@
 @using ClientSideBlazor
 @using ClientSideBlazor.Shared
 
-@using SharedModel
+@using SharedModels
 
 @using Blazored.FluentValidation
