--- a/samples/ServerSideBlazor/_Imports.razor
+++ b/samples/ServerSideBlazor/_Imports.razor
@@ -6,6 +6,6 @@
 @using ServerSideBlazor
 @using ServerSideBlazor.Shared
 
-@using SharedModel
+@using SharedModels
 
 @using Blazored.FluentValidation
