Added ability to disable assembly scanning and added some better exception catching

--- a/samples/BlazorServer/Pages/Index.razor
+++ b/samples/BlazorServer/Pages/Index.razor
@@ -5,7 +5,7 @@
 <hr class="mb-5" />
 
 <EditForm Model="@Person" OnValidSubmit="@SubmitValidForm">
-    <FluentValidationValidator />
+    <FluentValidationValidator DisableAssemblyScanning="@true" />
     <ValidationSummary />
 
     <p>
