--- a/samples/BlazorServer/_Imports.razor
+++ b/samples/BlazorServer/_Imports.razor
@@ -3,9 +3,9 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
-@using ServerSideBlazor
-@using ServerSideBlazor.Shared
 
+@using BlazorServer
+@using BlazorServer.Shared
 @using SharedModels
 
 @using Blazored.FluentValidation
