--- a/samples/BlazorServer/Shared/NavMenu.razor
+++ b/samples/BlazorServer/Shared/NavMenu.razor
@@ -11,6 +11,9 @@
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
+            <NavLink class="nav-link" href="/validatorfactory">
+                <span class="oi" aria-hidden="true"></span> Validator Factory
+            </NavLink>
         </li>
     </ul>
 </div>
