--- a/samples/BlazorWebAssembly/Pages/Index.razor
+++ b/samples/BlazorWebAssembly/Pages/Index.razor
@@ -5,7 +5,7 @@
 <hr class="mb-5" />
 
 <EditForm Model="@_person" OnSubmit="@SubmitFormAsync">
-    <FluentValidationValidator @ref="_fluentValidationValidator" Options="@(options => options.IncludeAllRuleSets())" />
+    <FluentValidationValidator @ref="_fluentValidationValidator" Options="@(options => options.IncludeAllRuleSets())" ContextData="_data" />
     <ValidationSummary />
 
     <p>
@@ -72,6 +72,10 @@
 @code {
     private readonly Person _person = new();
     private FluentValidationValidator? _fluentValidationValidator;
+    private readonly IDictionary<string, object> _data = new Dictionary<string, object>
+    {
+        { "MinAgeLimit", 18 }
+    };
 
     private async Task SubmitFormAsync()
     {
