--- a/samples/BlazorServer/Pages/Index.razor
+++ b/samples/BlazorServer/Pages/Index.razor
@@ -63,6 +63,18 @@
         <ValidationMessage For="@(() => _person.Address.Postcode)" />
     </p>
 
+    <p>
+        <label>Start Lucky Number Range: </label>
+        <InputNumber @bind-Value="@_person.StartLuckyNumberRange" />
+        <ValidationMessage For="@(() => _person.StartLuckyNumberRange)" />
+    </p>
+
+    <p>
+        <label>End Lucky Number Range: </label>
+        <InputNumber @bind-Value="@_person.EndLuckyNumberRange" />
+        <ValidationMessage For="@(() => _person.EndLuckyNumberRange)" />
+    </p>
+
     <button type="submit">Save</button>
 
 </EditForm>
@@ -73,9 +85,9 @@
     private readonly Person _person = new();
     private FluentValidationValidator? _fluentValidationValidator;
 
-    private void SubmitValidForm() 
+    private void SubmitValidForm()
         => Console.WriteLine("Form Submitted Successfully!");
 
-    private void PartialValidate() 
+    private void PartialValidate()
         => Console.WriteLine($"Partial validation result : {_fluentValidationValidator?.Validate(options => options.IncludeRuleSets("Names"))}");
 }
