Added some `ValidateAsync` tests, one is failing for some reason, need to investigate.

--- a/tests/Blazored.FluentValidation.Tests/AssemblyScanning/Component.razor
+++ b/tests/Blazored.FluentValidation.Tests/AssemblyScanning/Component.razor
@@ -1,5 +1,4 @@
-﻿@using Blazored.FluentValidation.Tests.Model
-<EditForm 
+﻿<EditForm 
     Model="@_person"
     OnValidSubmit="ValidSubmit"
     OnInvalidSubmit="InvalidSubmit">
