Test now passes, however the behavior is strange: When doing normal validation, all rules are automatically included, but when doing it with `ValidateAsync`, they need to be included manually.

--- a/tests/Blazored.FluentValidation.Tests/AsyncValidation/Component.razor
+++ b/tests/Blazored.FluentValidation.Tests/AsyncValidation/Component.razor
@@ -30,12 +30,11 @@
     private readonly Person _person = new();
     private FluentValidationValidator? _fluentValidationValidator;
 
-    public ValidationResultType Result { get; private set; }
+    public ValidationResultType? Result { get; private set; }
 
     private async Task SubmitFormAsync()
     {
         var result = await _fluentValidationValidator!.ValidateAsync();
         Result = result ? ValidationResultType.Valid : ValidationResultType.Error;
     }
-
 }
